--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gast==0.3.2
 google-pasta==0.1.8
 grpcio==1.25.0
 h5py==2.10.0
+joblib==0.14.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
@@ -13,6 +14,7 @@ pkg-resources==0.0.0
 protobuf==3.10.0
 python-dateutil==2.8.1
 pytz==2019.3
+scikit-learn==0.22
 scipy==1.3.2
 six==1.13.0
 tensorboard==1.14.0
