--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,18 @@ google-pasta==0.1.8
 grpcio==1.25.0
 h5py==2.10.0
 joblib==0.14.0
+Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 numpy==1.17.4
 pandas==0.24.2
-pkg-resources==0.0.0
 protobuf==3.10.0
+pydot==1.4.1
+pyparsing==2.4.5
 python-dateutil==2.8.1
 pytz==2019.3
+PyYAML==5.2
 scikit-learn==0.22
 scipy==1.3.2
 six==1.13.0
